--- a/fimnews/pubspec.yaml
+++ b/fimnews/pubspec.yaml
@@ -14,6 +14,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   vibration: ^2.0.0
   share_plus: ^12.0.0
+  firebase_core: ^3.6.0
+  firebase_messaging: ^15.1.3
+  flutter_local_notifications: ^18.0.1
 
 dev_dependencies:
   flutter_test:
