--- a/fimnews/pubspec.yaml
+++ b/fimnews/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   firebase_core: ^3.6.0
   firebase_messaging: ^15.1.3
   flutter_local_notifications: ^18.0.1
+  onesignal_flutter: ^5.1.2
   
 
 dev_dependencies:
